--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Kilix V2</title>
   		<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
-  		<script src="assets/js/modernizr.js"></script>
+  		<script src="assets/js/vendor/modernizr.min.js"></script>
 	</head>
 	<body>
 		<nav class="top-bar">
