--- a/views/scripts.html.twig
+++ b/views/scripts.html.twig
@@ -3,9 +3,11 @@
 <script src="/assets/js/foundation/foundation.min.js"></script>
 <script src="/assets/js/vendor/history.min.js"></script>
 <script src="/assets/js/vendor/waypoints.min.js"></script>
-<script src="/assets/js/pushstate.min.js"></script>
-<script src="/assets/js/menu.min.js"></script>
-<script src="/assets/js/waypoint-kilix.min.js"></script>
+
+<!-- TODO: Les fichiers min seront placés dans le mix.js une fois le projet mis en Prod -->
+<script src="/assets/js/pushstate.js"></script>
+<script src="/assets/js/menu.js"></script>
+<script src="/assets/js/waypoint-kilix.js"></script>
 <script>
 	$(document).foundation();
 </script>
