--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -24,7 +24,8 @@
 				</ul>
 				<section class='nav-links-wrapper nav-links-hidden'>
 					<a class='nav-link current' href="/" data-pos="1">Home</a>
-					<a class='nav-link' href="/team" data-pos="2">Team</a>
+					<!-- <a class='nav-link' href="/team" data-pos="2">Team</a> -->
+					<a class='nav-link' href="/agilite" data-pos="2">Agilite</a>
 					<a class='nav-link' href="/contact" data-pos="3">Contact</a>
 				</section>
 			</nav>
