Added Base CSS and HTML

--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %} 
-	<div class="container contact" data-pos="3">
+	<div class="container contact">
 		<section class="large-12 columns panel h2000">
 			contact
 		</section>
