--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,17 +1,21 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-	<div class="container home" data-pos="1">
-		<div class="loading"></div>
-		<section class="large-12 columns panel h800" id='lol'>
+	<div class="container home">
+		<header class="large-12 columns landing-home">
+			<!--Test-->
+			<h1>Ceci est un h1</h1>
+			<h2>Ceci est un h2</h2>
+			<h3>Ceci est un h3</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, assumenda, incidunt fugiat doloribus tempore illum libero ipsam non eaque rerum quod sint eos vero quo harum magnam aliquid consectetur corporis.</p>
+		</header>
+		<section class="large-12 columns svg-anim svg-valeur">
 		</section>
-		<section class="large-12 columns panel h400">
+		<section class="large-12 columns svg-anim svg-risque">
 		</section>
-		<section class="large-12 columns panel h400">
+		<section class="large-12 columns svg-anim svg-amelio">
 		</section>
-		<section class="large-12 columns panel h400">
-		</section>
-		<section class="large-12 columns panel h400">
+		<section class="large-12 columns svg-anim svg-extia">
 		</section>
 	</div>
 {% endblock %}
