--- a/web/assets/css/app.css
+++ b/web/assets/css/app.css
@@ -1,5 +1,9 @@
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,500,700);
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro);
+
 meta.foundation-mq-small {
   font-family: "/only screen and (max-width: 40em)/";
   width: 0em;
@@ -7635,77 +7639,32 @@ body {
   }
 }
 
+/* VARIABLES */
+
 /* BASE */
 
 body {
-  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
+  font-family: "Source Sans Pro";
 }
 
-body.unfolded {
-  -webkit-transform: translateY(8.125rem);
-  -ms-transform: translateY(8.125rem);
-  transform: translateY(8.125rem);
+h1 {
+  font-family: Ubuntu;
+  font-weight: bold;
+  font-size: 3.375rem;
+  color: #384047;
 }
 
-@media only screen and (min-width: 40.063em) {
-  body.unfolded {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
+h2 {
+  font-family: Ubuntu;
+  font-weight: 500;
+  font-size: 3rem;
+  color: #a8b7bf;
 }
 
-body.unfolded .nav-links-wrapper {
-  -webkit-transform: rotateX(0deg);
-  -ms-transform: rotateX(0deg);
-  transform: rotateX(0deg);
-}
-
-body.unfolded .icon-folded {
-  -webkit-transform: translateY(-2.1875rem);
-  -ms-transform: translateY(-2.1875rem);
-  transform: translateY(-2.1875rem);
-}
-
-body.unfolded .icon-unfolded {
-  -webkit-transform: translateY(-2.3125rem);
-  -ms-transform: translateY(-2.3125rem);
-  transform: translateY(-2.3125rem);
-}
-
-.h800 {
-  height: 800px;
-}
-
-.h400 {
-  height: 400px;
-}
-
-.h2000 {
-  height: 2000px;
-}
-
-.wrapper-new {
-  -webkit-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  transform: translateX(100%);
-  position: absolute;
-  width: 100%;
-  z-index: 2;
-}
-
-.wrapper-new.wrapper-prev {
-  -webkit-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-
-.disabled {
-  pointer-events: none;
+p {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  color: #8c989e;
 }
 
 /* COMPONENTS */
@@ -7774,6 +7733,10 @@ body.unfolded .icon-unfolded {
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
+  background: transparent;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
 .top-bar .nav-links-wrapper {
@@ -7806,16 +7769,6 @@ body.unfolded .icon-unfolded {
   }
 }
 
-.top-bar .nav-links-hidden {
-  visibility: hidden;
-}
-
-@media only screen and (min-width: 40.063em) {
-  .top-bar .nav-links-hidden {
-    visibility: visible;
-  }
-}
-
 .top-bar .nav-link {
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
@@ -7832,4 +7785,77 @@ body.unfolded .icon-unfolded {
 
 .top-bar .title-area {
   float: left;
+}
+
+body {
+  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+body.unfolded {
+  -webkit-transform: translateY(8.125rem);
+  -ms-transform: translateY(8.125rem);
+  transform: translateY(8.125rem);
+}
+
+@media only screen and (min-width: 40.063em) {
+  body.unfolded {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+body.unfolded .nav-links-wrapper {
+  -webkit-transform: rotateX(0deg);
+  -ms-transform: rotateX(0deg);
+  transform: rotateX(0deg);
+}
+
+body.unfolded .icon-folded {
+  -webkit-transform: translateY(-2.1875rem);
+  -ms-transform: translateY(-2.1875rem);
+  transform: translateY(-2.1875rem);
+}
+
+body.unfolded .icon-unfolded {
+  -webkit-transform: translateY(-2.3125rem);
+  -ms-transform: translateY(-2.3125rem);
+  transform: translateY(-2.3125rem);
+}
+
+.wrapper-new {
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
+
+.wrapper-new.wrapper-prev {
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+
+.disabled {
+  pointer-events: none;
+}
+
+/*HOME*/
+
+.landing-home {
+  height: 800px;
+  background: white;
+  margin-bottom: 1.25rem;
+}
+
+.svg-anim {
+  height: 400px;
+  background: green;
+  margin-bottom: 1.25rem;
 }
