Start New navbar

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -17,11 +17,9 @@
 						<img src="assets/img/ARROW_TOP_VA_MOURIR_STEPH.png" />
 					</span>
 				</i>
-				<ul class="title-area">
-				    <li class="name">
-				      <h1><a href="/">Kilix</a></h1>
-				    </li>
-				</ul>
+				<div class="logo">
+				      <img class="svg" src="assets/img/logo_small.svg" alt="">
+				</div>
 				<section class='nav-links-wrapper nav-links-hidden'>
 					<a class='nav-link current' href="/" data-pos="1">Home</a>
 					<!-- <a class='nav-link' href="/team" data-pos="2">Team</a> -->
