--- a/web/assets/scss/componenents/menu.scss
+++ b/web/assets/scss/componenents/menu.scss
@@ -46,9 +46,14 @@
 	position: fixed;
 	width: 100%;
 	z-index: 2;
+	transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
+	box-shadow: 0 1px 0 rgba(0,0,0,.1),0 6px 0 rgba(0,0,0,.05);
+
 	
 	@media #{$medium-up} {
-		background:transparent;
+		// background:transparent;
+		height: rem-calc(100);
+
 	}
 	
 	.nav-links-wrapper {
@@ -57,48 +62,53 @@
 		background: #fff;
 		position: absolute;
 		width: 100%;
-		bottom: rem-calc(63);
-		transform: rotateX(90deg);
+		bottom: rem-calc(60);
+		transform: rotateX(87.5deg);
 		transform-origin:100% 100%;
 		@media #{$medium-up} {
 			position: static;
 			width: auto;
 			transform: rotateX(0deg);
 			transition:transform 0s cubic-bezier(0.165,0.840,0.440,1.000);
+			float:right;
+			margin-right:rem-calc(35);
 		}
 	}
 
 
 
 	.nav-link {
+		font-family: Ubuntu;
+		font-size: rem-calc(16);
+		font-weight: bold;
+		text-transform:uppercase;
+		color:#333333;
 		backface-visibility:hidden;
 		display: block;
 		margin-left: rem-calc(15);
+
 		@media #{$medium-up} {
 			float:left;
+			line-height: 6rem;
 		}
 	}
 
 	.logo {
 		position: relative;
 		float: left;
-		height: 30px;
+		width: rem-calc(85);
+		height: 100%;
+		padding: 0 2rem;
 		img {
-			// width: 100%;
 			height: 100%;
 		}
-		// height: 6.99rem;
-		// line-height: 7rem;
-		// width: 7rem;
-		// height: 9.99rem;
-		// float: left;
-		// line-height: 10rem;
-		// cursor: pointer;
-		// position: relative;
-		// margin: 0;
-		// border: 1px solid #fff;
-		// border-width: 0 1px;
-		// padding: 0 2rem;
+		svg {
+			width: 100%;
+			height: 100%;			
+		}
 		box-sizing: content-box;
+		@media #{$medium-up} {
+			width: rem-calc(100);
+		}
 	}
 }
