Navbar transition transparent - plain white Add color to home’s div (prototyping) Row class limit (1200px)

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -3,19 +3,33 @@
 {% block content %}
 	<div class="container home">
 		<header class="large-12 columns landing-home">
-			<!--Test-->
-			<h1>Ceci est un h1</h1>
-			<h2>Ceci est un h2</h2>
-			<h3>Ceci est un h3</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, assumenda, incidunt fugiat doloribus tempore illum libero ipsam non eaque rerum quod sint eos vero quo harum magnam aliquid consectetur corporis.</p>
+			<div class="row">
+				<!--Test-->
+				<h1>Ceci est un h1</h1>
+				<h2>Ceci est un h2</h2>
+				<h3>Ceci est un h3</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, assumenda, incidunt fugiat doloribus tempore illum libero ipsam non eaque rerum quod sint eos vero quo harum magnam aliquid consectetur corporis.</p>
+			</div>
 		</header>
 		<section class="large-12 columns svg-anim svg-valeur">
+			<div class="row">
+				
+			</div>
 		</section>
 		<section class="large-12 columns svg-anim svg-risque">
+			<div class="row">
+				
+			</div>
 		</section>
 		<section class="large-12 columns svg-anim svg-amelio">
+			<div class="row">
+				
+			</div>
 		</section>
 		<section class="large-12 columns svg-anim svg-extia">
+			<div class="row">
+				
+			</div>
 		</section>
 	</div>
 {% endblock %}
