--- a/web/assets/scss/foundation/_settings.scss
+++ b/web/assets/scss/foundation/_settings.scss
@@ -30,7 +30,7 @@
 
 // $include-html-grid-classes: $include-html-classes;
 
-$row-width: 1200px;
+$row-width: 75rem;
 // $column-gutter: rem-calc(30);
 // $total-columns: 12;
 
