--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -1,7 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %} 
-	<div class="container team" data-pos="2">
+	<div class="container team">
 		<section class="large-12 columns panel h2000">
 			team
 		</section>
