add of first value animation / creation of route for animation development

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -44,6 +44,7 @@
 		</div>
 		<!-- DEBUG : Par la suite le fichier mix.js générera le min.js -->
   		{% include "scripts-debug.html.twig" %}
+  		<script src="assets/js/animations.min.js"></script>
   		<script type="text/javascript">
   		</script>
 	</body>
