--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -3,11 +3,13 @@
 <script src="/assets/js/foundation/foundation.min.js"></script>
 <script src="/assets/js/vendor/history.min.js"></script>
 <script src="/assets/js/vendor/waypoints.min.js"></script>
+<script src="/assets/js/vendor/snap.svg.min.js"></script>
 
 <!-- TODO: Les fichiers min seront placés dans le mix.js une fois le projet mis en Prod -->
 <script src="/assets/js/pushstate.js"></script>
 <script src="/assets/js/menu.js"></script>
 <script src="/assets/js/waypoint-kilix.js"></script>
+<script src="assets/js/animations.min.js"></script>
 <script>
 	$(document).foundation();
 </script>
