Nav enhanced, Footer done

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -35,7 +35,11 @@
 		  		</div>
 		  	</div>
 			<footer>
-				
+				<div class="row">
+					<q>Si je devais faire un cadeau à la génération suivante, je lui apprendrais à ne pas se prendre au sérieux.</q>
+					<a href="/contact" class="button">Contactez-nous</a>	
+					<div class="copyright">Kilix love extia copyright tout ça</div>
+				</div>
 			</footer>
 		</div>
 		<!-- DEBUG : Par la suite le fichier mix.js générera le min.js -->
