--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="container home">
-		<header class="large-12 columns landing-home">
+		<header class="landing-home">
 			<div class="row">
 				<!--Test-->
 				<h1>Ceci est un h1</h1>
@@ -11,22 +11,22 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, assumenda, incidunt fugiat doloribus tempore illum libero ipsam non eaque rerum quod sint eos vero quo harum magnam aliquid consectetur corporis.</p>
 			</div>
 		</header>
-		<section class="large-12 columns svg-anim svg-valeur">
+		<section class="svg-anim svg-valeur">
 			<div class="row">
 				
 			</div>
 		</section>
-		<section class="large-12 columns svg-anim svg-risque">
+		<section class="svg-anim svg-risque">
 			<div class="row">
 				
 			</div>
 		</section>
-		<section class="large-12 columns svg-anim svg-amelio">
+		<section class="svg-anim svg-amelio">
 			<div class="row">
 				
 			</div>
 		</section>
-		<section class="large-12 columns svg-anim svg-extia">
+		<section class="svg-anim svg-extia">
 			<div class="row">
 				
 			</div>
