--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -3,6 +3,7 @@
 
 
 /* PROTOTYPING */
+
 html {
 	background: #000;
 }
@@ -13,12 +14,6 @@ body {
 		background: yellow;
    	}
 }
-.landing-home{
-	margin-bottom:rem-calc(20);
-	position: fixed;
-	padding-top: rem-calc(120);
-	background: url('../img/bg_home.png');
-}
 
 .svg-anim{
 	height: 400px;
@@ -26,7 +21,7 @@ body {
 }
 
 .svg-valeur {
-	margin-top: rem-calc(800);
+
 
 }
 .svg-risque {
@@ -74,6 +69,10 @@ p{
 	color: $text-color;
 }
 
+a{
+	text-decoration: none;
+}
+
 
 /* COMPONENTS */ 
 
@@ -84,6 +83,14 @@ body {
 	.site-wrapper {
 		transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
 		backface-visibility:hidden;
+
+		.main-wrapper{
+			position:relative; z-index:1;
+		}
+
+		footer{
+			position:relative; z-index:2;
+		}
 	}
 	&.unfolded {
 		.site-wrapper {
@@ -116,6 +123,10 @@ body {
 	}
 }
 
+.container{
+	@include clearfix;
+}
+
 .wrapper-new{
 	transform: translateX(100%);
 	position: absolute;
@@ -137,10 +148,44 @@ body {
 /*HOME*/
 .landing-home{
 	height: 800px;
-	margin-bottom:rem-calc(20);
+	width: 100%;
+	padding-top: rem-calc(120);
+	background: url('../img/bg_home.png') fixed;
 }
 
 .svg-anim{
 	height: 400px;
+	position:relative;
+	z-index:2;
 }
 
+/*FOOTER*/
+footer{
+
+	background: white;
+	text-align:center;
+	padding-bottom: rem-calc(10);
+	q{
+		display: block;
+		font-size:rem-calc(30);
+		line-height: rem-calc(40);
+		margin: 1em 0;
+		text-align: center;
+		padding: 0 1em;
+
+		@media #{$medium-up} {
+			font-size:rem-calc(48);
+			line-height: rem-calc(72);
+			margin: 2.7em 0;
+			padding: 0 2em;
+		}
+	}
+
+	a.button{
+		margin-bottom:rem-calc(20);
+
+		@media #{$medium-up} {
+			margin-bottom:rem-calc(180);
+		}
+	}
+}
