Landing page + struct button

--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -46,7 +46,7 @@ else{
 }
 
 $(function(){
-    $("body").on("click", ".landing-next-section-back, .landing-next-section-arrow", function(){
+    $('.landing-next-section-back, .landing-next-section-arrow').on('click',function(){
         $('html, body').animate({  
             scrollTop:750  
         }, 'slow'); 
