--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -25,10 +25,6 @@ body {
 	background:green; 
 }
 
-.svg-valeur {
-	margin-top: rem-calc(800);
-
-}
 .svg-risque {
 	background:pink;
 }
@@ -73,7 +69,17 @@ p{
 	line-height: rem-calc(28);
 	color: $text-color;
 }
+a {
+	&.button {
+		font-family: "Source Sans Pro";
+		transition:all .3s cubic-bezier(0.165,0.840,0.440,1.000);
 
+		&:active {
+			transform:translateY(rem-calc(4));
+			box-shadow: 0px 0px 0px 0px #384047;
+		}
+	}
+}
 
 /* COMPONENTS */ 
 
@@ -136,11 +142,56 @@ body {
 
 /*HOME*/
 .landing-home{
-	height: 800px;
+	height: 850px;
 	margin-bottom:rem-calc(20);
+
+	.landing-main-text {
+
+		@media #{$medium-up} {
+			margin-top: rem-calc(170);
+		}
+	}
+
+	.landing-agility-button {
+		width: rem-calc(292);
+		height: rem-calc(42);
+		background: #4f5a64;
+		line-height: 42px;
+		padding: 0;
+		border-radius: 4px;
+		margin: auto;
+		display: block;
+		box-shadow: 0px 4px 0px 0px #384047;
+
+		@media #{$medium-up} {
+			margin: 0;
+		}
+	}
+
+	.landing-next-section-wrapper {
+		height: rem-calc(115);
+		width: rem-calc(115);
+		position: absolute;
+		bottom: rem-calc(-80);
+		left: calc(50% - 3.59375rem); // Rem calc ne marche pas dans un calc ❤
+
+		.landing-next-section-back {
+			height: 100%;
+			width: 100%;
+			background: #4f5a64;
+			transform:rotate(45deg);
+			border-radius: rem-calc(10px);
+		}
+	}
 }
 
 .svg-anim{
 	height: 400px;
 }
+
+.svg-valeur {
+	margin-top: rem-calc(850);
+}
+
+
 
