Footer enhanced, anim pushstate modified

--- a/views/agilite.html.twig
+++ b/views/agilite.html.twig
@@ -2,8 +2,26 @@
 
 {% block content %} 
 	<div class="container contact">
-		<section class="large-12 columns panel h2000">
-			Agilite
-		</section>
+		<div class="row">
+			<section class="large-12 columns">
+				<article>
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+			</section>
+			<section class="large-12 columns">
+				<article>
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+			</section>
+			<section class="large-12 columns">
+				<article>
+					<h2>Ceci est un titre</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto inventore culpa at facere quia nisi doloribus dolores praesentium. Id, vero, saepe quasi officia dolores accusantium corrupti delectus! Laboriosam, incidunt, ab?</p>
+				</article>
+			</section>	
+		</div>
+		
 	</div>
 {% endblock %}
