--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -20,12 +20,12 @@
 				<div class="logo">
 				      <img class="svg" src="assets/img/logo_small.svg" alt="">
 				</div>
-				<section class='nav-links-wrapper nav-links-hidden'>
+				<div class='nav-links-wrapper nav-links-hidden'>
 					<a class='nav-link current' href="/" data-pos="1">Home</a>
 					<!-- <a class='nav-link' href="/team" data-pos="2">Team</a> -->
-					<a class='nav-link' href="/agilite" data-pos="2">Agilite</a>
-					<a class='nav-link' href="/contact" data-pos="3">Contact</a>
-				</section>
+					<a class='nav-link' href="/agilite" data-pos="3">Agilite</a>
+					<a class='nav-link' href="/contact" data-pos="4">Contact</a>
+				</div>
 			</div>
 		</nav>
 		<div class='site-wrapper clearfix'>
