--- a/web/assets/scss/componenents/menu.scss
+++ b/web/assets/scss/componenents/menu.scss
@@ -1,40 +1,5 @@
 /* MENU */
-.toggle-menu {
-	-webkit-touch-callout: none;
-	user-select: none;
-	font-family: Arial,sans-serif;
-	cursor:pointer;
-	display: block;
-	float: left;
-	font-size: rem-calc(45);
-	color: #000; 
-	border: 1px solid #dfdfdf;
-	border-width: 0 1px;
-	box-sizing:border-box;
-	width:rem-calc(63);
-	height:rem-calc(63);
-	text-align: center;
-	line-height: rem-calc(63);
-	overflow: hidden;
-	font-style: normal;
 
-	// Arrow Icon
-	.icon-unfolded {
-		display: block;
-		transform:translateY(rem-calc(0));
-		transition:transform .5s ease;
-		img {
-			width: 25px;
-			margin-left: rem-calc(2);
-		}
-	}
-	// Hamburger Icon
-	.icon-folded {
-		display: block;
-		transform:translateY(rem-calc(0));
-		transition:transform .5s ease;		
-	}
-}
 
 .navbar {
 	background: #fff;
@@ -69,9 +34,53 @@
 				height: rem-calc(140);
 				line-height: rem-calc(140);
 			}
+
+
+			.logo svg {
+				height: 140px;	
+			}
 		}
 
 	}
+
+
+	.toggle-menu {
+		-webkit-touch-callout: none;
+		user-select: none;
+		font-family: Arial,sans-serif;
+		cursor:pointer;
+		display: block;
+		float: left;
+		font-size: rem-calc(45);
+		color: #000; 
+		border: 1px solid #dfdfdf;
+		border-width: 0 1px;
+		box-sizing:border-box;
+		width:rem-calc(63);
+		height:rem-calc(63);
+		text-align: center;
+		line-height: rem-calc(63);
+		overflow: hidden;
+		font-style: normal;
+
+		// Arrow Icon
+		.icon-unfolded {
+			display: block;
+			transform:translateY(rem-calc(0));
+			transition:transform .5s ease;
+			img {
+				width: 25px;
+				margin-left: rem-calc(2);
+			}
+		}
+		// Hamburger Icon
+		.icon-folded {
+			display: block;
+			transform:translateY(rem-calc(0));
+			transition:transform .5s ease;		
+		}
+	}
+
 	
 	.nav-links-wrapper {
 		backface-visibility:hidden;
@@ -94,24 +103,38 @@
 			bottom:auto;
 			text-align: right;
 		}
-	}
+		@media #{$small-only}{
+			&:after{
+				content:" ";
+				position:absolute;
+				top:0; left:0; bottom:0; right: 0;
+				background:rgba(0,0,0,0.2);
+				z-index:1;
+				transition: all 0.5s;
+				pointer-events:none;
+			}
+		}
+		.nav-link {
+			font-family: Ubuntu;
+			font-size: rem-calc(16);
+			font-weight: bold;
+			text-transform:uppercase;
+			color:#333333;
+			backface-visibility:hidden;
+			display: block;
+			margin-left: rem-calc(15);
+			height: 45px;
+			line-height: 45px;
+			&:nth-child(2){
+				transition-delay: 0.2s;
+			}
+			&:nth-child(3){
+				transition-delay: 0.4s;
+			}
 
-
-
-	.nav-link {
-		font-family: Ubuntu;
-		font-size: rem-calc(16);
-		font-weight: bold;
-		text-transform:uppercase;
-		color:#333333;
-		backface-visibility:hidden;
-		display: block;
-		margin-left: rem-calc(15);
-		height: 45px;
-		line-height: 45px;
-
-		@media #{$medium-up} {
-			display: inline-block;
+			@media #{$medium-up} {
+				display: inline-block;
+			}
 		}
 	}
 
@@ -126,15 +149,57 @@
 		}
 		svg {
 			width: 100%;
-			height: 63px;	
+			height: 63px;
+			transition: height 0.8s;	
 			@media #{$medium-up} {
-				height: 99%;
+				height: 100px;
 			}		
 		}
 		box-sizing: content-box;
 		@media #{$medium-up} {
 			width: rem-calc(100);
 			left:0;
+		}
+	}
+}
+
+
+body.unfolded {
+	.site-wrapper {
+		-webkit-transform: translateY(rem-calc(130));
+		-moz-transform: translateY(rem-calc(130));
+		transform: translateY(rem-calc(130));
+		
+		@media #{$medium-up} {
+			-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+			transform: translateY(0);
+		}
+		.icon-folded {
+			transform:translateY(rem-calc(-35));
+		}
+		.icon-unfolded {
+			transform:translateY(rem-calc(-37));
+		}
+	}
+	.navbar {
+		transform:translateY(rem-calc(132));
+		transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
+		@media #{$medium-up} {
+			transform:translateY(rem-calc(0));
+		}
+		.nav-links-wrapper {
+			transform: rotateX(0deg);
+
+			&:after{
+				content:" ";
+				position:absolute;
+				top:0; left:0; bottom:0; right: 0;
+				background:rgba(0,0,0,0);
+				z-index:1;
+			}
+
+			
 		}
 	}
 }
