--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -4,35 +4,8 @@
 
 /* PROTOTYPING */
 
-html {
-	background: #000;
-}
-
-body {
-	background: navy;
-	@media #{$small-only} {
-		background: yellow;
-   	}
-}
-
-.svg-anim{
-	height: 400px;
-	background:green; 
-}
-
-.svg-valeur {
 
 
-}
-.svg-risque {
-	background:pink;
-}
-.svg-amelio {
-	background:yellow;
-}
-.svg-extia {
-	background:red;
-}
 
 /* VARIABLES */
 $primary-color : #384047;
@@ -42,7 +15,12 @@ $text-color : #8c989e;
 /* BASE */
 body {
 	font-family: "Source Sans Pro";
+	transition: height 1s;
+	background: #fff;
+	min-height: 800px;
 }
+
+
 
 h1{
 	font-family: Ubuntu;
@@ -79,49 +57,16 @@ a{
 @import "componenents/menu";
 
 
-body {	
+
 	.site-wrapper {
 		transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
 		backface-visibility:hidden;
 
 		.main-wrapper{
 			position:relative; z-index:1;
-		}
+		}	
+	}
 
-		footer{
-			position:relative; z-index:2;
-		}
-	}
-	&.unfolded {
-		.site-wrapper {
-			-webkit-transform: translateY(rem-calc(130));
-			-moz-transform: translateY(rem-calc(130));
-			transform: translateY(rem-calc(130));
-			
-			@media #{$medium-up} {
-				-webkit-transform: translateY(0);
-				-moz-transform: translateY(0);
-				transform: translateY(0);
-			}
-			.icon-folded {
-				transform:translateY(rem-calc(-35));
-			}
-			.icon-unfolded {
-				transform:translateY(rem-calc(-37));
-			}
-		}
-		.navbar {
-			transform:translateY(rem-calc(132));
-			transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
-			@media #{$medium-up} {
-				transform:translateY(rem-calc(0));
-			}
-			.nav-links-wrapper {
-				transform: rotateX(0deg);
-			}
-		}
-	}
-}
 
 .container{
 	@include clearfix;
@@ -130,8 +75,10 @@ body {
 .wrapper-new{
 	transform: translateX(100%);
 	position: absolute;
+	top:0;
+	left:0;
 	width:100%;
-	z-index: 2;
+	z-index: 10;
 
 	&.wrapper-prev{
 		transform: translateX(-100%);
@@ -150,21 +97,39 @@ body {
 	height: 800px;
 	width: 100%;
 	padding-top: rem-calc(120);
-	background: url('../img/bg_home.png') fixed;
+	background: url('../img/bg_home.png') /*fixed*/;
 }
 
 .svg-anim{
-	height: 400px;
-	position:relative;
-	z-index:2;
+	
+	background:white; 
+	.row{
+		border-bottom: 1px solid #e3e3e3;
+		padding: 5rem 0;
+	}
+
+	h2{
+		font-size:rem-calc(22);
+		font-weight: 400;
+		margin: 0 0 0.5rem 0;
+	}
+	h3{
+		font-size:rem-calc(48);
+		font-family: Ubuntu;
+		font-weight: 500;
+		margin: 0rem 0 1.5rem 0;
+	}
 }
 
 /*FOOTER*/
 footer{
 
-	background: white;
+	background: url('../img/bg-footer.png') #39444e;
+	background-size:cover;
 	text-align:center;
-	padding-bottom: rem-calc(10);
+	padding-bottom: rem-calc(30);
+	position:relative; z-index:1;
+
 	q{
 		display: block;
 		font-size:rem-calc(30);
@@ -172,20 +137,33 @@ footer{
 		margin: 1em 0;
 		text-align: center;
 		padding: 0 1em;
+		font-family: Ubuntu;
+		color:white;
 
 		@media #{$medium-up} {
 			font-size:rem-calc(48);
 			line-height: rem-calc(72);
-			margin: 2.7em 0;
+			margin: 3em 0 2.4em 0;
 			padding: 0 2em;
 		}
 	}
 
 	a.button{
 		margin-bottom:rem-calc(20);
+		font-size: rem-calc(28);
+		font-family: Source sans pro;
+		background: transparent;
+		border: 4px solid white;
+		padding: 0.3em 1.3em;
+		border-radius: 8px;
 
 		@media #{$medium-up} {
 			margin-bottom:rem-calc(180);
 		}
+	}
+
+	.copyright{
+		font-size:rem-calc(18);
+		color:white;
 	}
 }
