refactor javascript files

--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -9,7 +9,8 @@
 <script src="/assets/js/pushstate.js"></script>
 <script src="/assets/js/menu.js"></script>
 <script src="/assets/js/waypoint-kilix.js"></script>
-<script src="assets/js/animations.min.js"></script>
+<script src="assets/js/animations-functions.js"></script>
+<script src="assets/js/animation-value.js"></script>
 <script>
 	$(document).foundation();
 </script>
