--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -11,6 +11,7 @@
 <script src="/assets/js/waypoint-kilix.js"></script>
 <script src="assets/js/animations-functions.js"></script>
 <script src="assets/js/animation-value.js"></script>
+<script src="assets/js/animation-risk.js"></script>
 <script>
 	$(document).foundation();
 </script>
