--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -3,22 +3,20 @@
 {% block content %}
 	<div class="container home">
 		<header class="landing-home">
+			<img src="assets/img/abstract.svg" alt="" class="svg svg-bg show-for-medium-up">
 			<div class="row">
-				<div class="large-6 columns">
+				<div class="large-7 columns">
 					<h1 class='landing-main-text'>
 						Syndrome de<br>
-						la page blanche,
+						la page blanche,<br>
 						Bonjour.
 					</h1>
-<!-- 					<h1>Ceci est un h1</h1>
-					<h2>Ceci est un h2</h2>
-					<h3>Ceci est un h3</h3> -->
 					<p>Kilix est une super agence qui fait des trucs super avec l’agilité.</p>
 					<a class='landing-agility-button button'>
 						L’agilité au coeur de vos projets
 					</a>
 				</div>
-				<div class="large-6 columns">
+				<div class="large-5 columns">
 					
 				</div>
 				<div class='landing-next-section-wrapper'>
@@ -39,6 +37,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
 				</div>
 				<div class="large-8 columns">
+					<svg id="VALEUR-dispatch" x="0px" y="0px" viewBox="0 0 1400 700"></svg>
 					
 				</div>
 			</div>
