--- a/views/scripts-debug.html.twig
+++ b/views/scripts-debug.html.twig
@@ -46,10 +46,43 @@ else{
 }
 
 $(function(){
+
+
+
     $('.landing-next-section-back, .landing-next-section-arrow').on('click',function(){
         $('html, body').animate({  
             scrollTop:750  
         }, 'slow'); 
     });
+
+    setTimeout(function(){
+        //Snap("#abstract").select("polygon").hover(svgIn, svgOut);
+        //Snap("#abstract").selectAll("polygon").click(function(){console.log('salope')});
+        Snap("#abstract").selectAll("polygon").forEach(function(t){
+            t.hover(svgIn, svgOut);
+        });
+    }, 300);
+    
+    var colorArray = {
+        col1: '#e63429',
+        col2: '#fab400',
+        col3: '#009884',
+        col4: '#85cedf',
+        col5: '#087ec2'
+    };
+
+
+    var svgIn = function(){
+        this.attr({
+            fill: colorArray['col'+Math.floor((Math.random()*5)+1)]
+        })
+    }
+
+    var svgOut = function(){
+        this.attr({
+            fill: 'black'
+        })
+    }
+
 });
 </script>
