--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -12,14 +12,14 @@
 						Bonjour.
 					</h1>
 					<p>Kilix est une super agence qui fait des trucs super avec l’agilité.</p>
-					<a class='landing-agility-button button'>
+					<a class='landing-agility-button button '>
 						L’agilité au coeur de vos projets
 					</a>
 				</div>
 				<div class="large-5 columns">
 					
 				</div>
-				<div class='landing-next-section-wrapper'>
+				<div class='landing-next-section-wrapper show-for-medium-up'>
 					<div class='landing-next-section-back'>
 						<!-- Carré -->
 					</div>
