--- a/web/assets/scss/componenents/menu.scss
+++ b/web/assets/scss/componenents/menu.scss
@@ -14,6 +14,16 @@
 	box-shadow: 0 1px 0 rgba(0,0,0,.1),0 6px 0 rgba(0,0,0,.05);
 	transition:height .3s cubic-bezier(0.165,0.840,0.440,1.000),top .3s cubic-bezier(0.165,0.840,0.440,1.000),transform .6s cubic-bezier(0.165,0.840,0.440,1.000), background .6s cubic-bezier(0.165,0.840,0.440,1.000);	
 	
+	// &:after{
+	// 	background: linear-gradient(to right,#e63429 0,#e63429 20%,#fab400 20%,#fab400 40%,#009884 40%,#009884 60%,#85cedf 60%,#85cedf 80%,#087ec2 80%,#087ec4 100%);
+	// 	position:absolute;
+	// 	content:" ";
+	// 	width:100%;
+	// 	height: 5px;
+	// 	bottom:0;
+	// 	left:0;
+	// }
+
 	@media #{$medium-up} {
 		// background:transparent;
 		height: rem-calc(100);
@@ -21,6 +31,7 @@
 		.row{
 				height: rem-calc(100);
 				line-height: rem-calc(100);
+				padding:0 1rem;
 				transition: line-height 0.6s;
 				position: relative;
 
@@ -35,7 +46,7 @@
 			.row{
 				height: rem-calc(140);
 				line-height: rem-calc(140);
-				padding:0 1rem;
+				
 			}
 
 
@@ -105,6 +116,7 @@
 			line-height: 1.2;
 			bottom:auto;
 			text-align: right;
+			pointer-events: visible;
 		}
 		@media #{$small-only}{
 			&:after{
@@ -122,18 +134,18 @@
 			font-size: rem-calc(16);
 			font-weight: bold;
 			text-transform:uppercase;
-			color:#333333;
+			color:$primary-color;
 			backface-visibility:hidden;
 			display: block;
-			margin-left: rem-calc(15);
+			margin-left: 3rem;
 			height: 45px;
 			line-height: 45px;
 			pointer-events: visible;
-			&:nth-child(2){
-				transition-delay: 0.2s;
-			}
-			&:nth-child(3){
-				transition-delay: 0.4s;
+			transition: border 0.3s ease-out;
+
+
+			&.current, &:hover{
+				border-bottom: 3px solid $second-color;
 			}
 
 			@media #{$medium-up} {
