--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -22,8 +22,14 @@ body {
 h1{
 	font-family: Ubuntu;
 	font-weight: bold;
-	font-size: rem-calc(54);
-	line-height: rem-calc(70);
+	font-size: rem-calc(40);
+	line-height: rem-calc(48);
+
+	@media #{$medium-up}{
+		font-size: rem-calc(54);
+		line-height: rem-calc(70);
+	}
+	
 	color: $primary-color;
 }
 
@@ -105,14 +111,22 @@ a {
 
 /*HOME*/
 .landing-home{
-	height: rem-calc(850);
+	height:rem-calc(500);
+
+	@media #{$medium-up} {
+		height:rem-calc(850);
+	}
 	width: 100%;
 	padding-top: rem-calc(120);
-	//background: url('../img/bg_home.png') /*fixed*/;
+	background-image: url('../img/bg_home.png');
 	position: fixed; top:0; left:0;
 	-webkit-backface-visibility: hidden; 
 	-webkit-transform: translateZ(0);
 	z-index:1;
+
+	@media #{$medium-up}{
+		background-image: none;
+	}
 
 	svg.svg-bg{
 		position: absolute;
@@ -120,11 +134,17 @@ a {
 		left: 50%;
 		width: 150%;
 		transform: translateX(-50%) translateY(-50%);
-		opacity: 0.4;
+		transition: fill 0.3s, opacity 0.3s;
+		opacity: 0.8;
 		polygon{
-			transition: fill 0.3s, opacity, 0.3s;
+			transition: fill 0s, opacity 0s;
 			transform-origin: 50% 50%;
-			transition-delay: .6s;
+			transition-delay: 0;
+			stroke-width:1px;
+			stroke: rgba(0,0,0,0.7);
+			transition: stroke-dashoffset 2s ease-in-out;
+			// stroke-dasharray: 988.0062255859375px, 988.0062255859375px;
+			// stroke-dashoffset: 0px;
 			//animation: blink 1s infinite;
 
 			// @for $i from 0 to 40 {
@@ -136,8 +156,9 @@ a {
 
 
 			&:hover{
-				opacity:0.5;
+				opacity:1;
 				transition-delay: 0s;
+				transition: fill 0.2s, opacity 0.2s;
 				//transform: scale(0.97);
 				
 			}
@@ -175,10 +196,10 @@ a {
 		border-radius: 4px;
 		margin: auto;
 		display: block;
+		margin: 0;
 		box-shadow: 0px 4px 0px 0px #384047;
 
 		@media #{$medium-up} {
-			margin: 0;
 			pointer-events: visible;
 		}
 	}
@@ -203,7 +224,11 @@ a {
 }
 
 .svg-anim.svg-valeur{
-	margin-top:rem-calc(850);
+	margin-top:rem-calc(500);
+
+	@media #{$medium-up} {
+		margin-top:rem-calc(850);
+	}
 }
 .svg-anim{
 	position:relative;
