--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -34,6 +34,16 @@
 					{% block content %}{% endblock %}
 		  		</div>
 		  	</div>
+		  	<div class="references">
+		  		<div class="row">
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  			<div class="large-2 columns"><img src="http://placehold.it/170x80" alt=""></div>
+		  		</div>
+		  	</div>
 			<footer>
 				<div class="row">
 					<q>Si je devais faire un cadeau à la génération suivante, je lui apprendrais à ne pas se prendre au sérieux.</q>
