--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -56,12 +56,26 @@
 		</section>
 		<section class="svg-anim svg-amelio">
 			<div class="row">
-				
+				<div class="large-4 columns">
+					<h2>Gestion par la valeur</h2>
+					<h3>L'essentiel en premier !</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+				</div>
+				<div class="large-8 columns">
+					
+				</div>
 			</div>
 		</section>
 		<section class="svg-anim svg-extia">
 			<div class="row">
-				
+				<div class="large-8 columns">
+					
+				</div>
+				<div class="large-4 columns">
+					<h2>Gestion par la valeur</h2>
+					<h3>L'essentiel en premier !</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, debitis dicta a nemo libero esse. Cupiditate, facilis asperiores qui velit eveniet eligendi quos nostrum iusto minus similique. Non, qui, ipsa.</p>
+				</div>
 			</div>
 		</section>
 	</div>
